# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api
 definitions:
+  errors_utils.CustomError:
+    properties:
+      message:
+        type: string
+      statusCode:
+        type: integer
+    type: object
   forms.Pseudonym:
     properties:
       firstName:
@@ -115,6 +122,15 @@ paths:
   /users:
     get:
       description: Get users list
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: per page
+        in: query
+        name: perPage
+        type: integer
       produces:
       - application/json
       responses:
@@ -124,6 +140,10 @@ paths:
             items:
               $ref: '#/definitions/models.User'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors_utils.CustomError'
       summary: Get users list
       tags:
       - User
